[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/Labirinto.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Ganhou.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/Main.gd" type="Script" id=5]
[ext_resource path="res://assets/sons/tema.wav" type="AudioStream" id=6]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 100, 100 )

[node name="Main" type="Spatial"]
script = ExtResource( 5 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="Labirinto" parent="." instance=ExtResource( 1 )]

[node name="Ganhou" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.89571, 1.9693, 28.1216 )

[node name="Player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.2972, 0, 44.6224 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.0439856, 0.999032, 0, -0.999032, -0.0439856, 0, 15.5551, 0 )
light_energy = 3.0

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="TimerGeraCaixa" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="AudioTema" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 6 )
[connection signal="fim_de_jogo" from="HUD" to="." method="_on_HUD_fim_de_jogo"]
[connection signal="perdeu" from="HUD" to="." method="_on_HUD_perdeu"]
[connection signal="reinicia" from="HUD" to="." method="_on_HUD_reinicia"]
[connection signal="timeout" from="TimerGeraCaixa" to="." method="_on_TimerGeraCaixa_timeout"]
